--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,9 +8,11 @@ authors = ["Giuseppe Maddiona <giuseppe.maddiona@gmail.com>"]
 python = "^3.8"
 fastapi = "^0.75.0"
 uvicorn = {extras = ["standard"], version = "^0.17.6"}
+pytz = "^2022.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
+autopep8 = "^1.6.0"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
