--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,13 +6,14 @@ authors = ["Giuseppe Maddiona <giuseppe.maddiona@gmail.com>"]
 
 [tool.poetry.dependencies]
 python = "^3.8"
-fastapi = "^0.75.0"
+fastapi = {extras = ["all"], version = "^0.78.0"}
 uvicorn = {extras = ["standard"], version = "^0.17.6"}
 pytz = "^2022.1"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
 autopep8 = "^1.6.0"
+coverage = "^6.3.3"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
