--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ python = "3.8.12"
 fastapi = {extras = ["all"], version = "^0.78.0"}
 uvicorn = {extras = ["standard"], version = "^0.17.6"}
 pytz = "^2022.1"
+SQLAlchemy = "^1.4.36"
+alembic = "^1.8.0"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
